Modified css to hide body's scrollbar, layout is scrollable from anywhere, menu position no longer changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,19 +16,16 @@
 body {
     background: var(--background);
     color: var(--foreground);
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar,
+::-webkit-scrollbar-button {
+    display: none;
 }
 
 * {
     box-sizing: border-box;
     user-select: none;
-}
-
-.scrollbar-none {
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-}
-
-.scrollbar-none::-webkit-scrollbar,
-.scrollbar-none::-webkit-scrollbar-button {
-    display: none;
 }
